# git-spy

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md
src/: app.rs  global_path.rs  main.rs  message.rs  parse_arguments.rs  scraping.rs  selector.rs
src/interactive_input/: mod.rs  select_bound.rs  select_headless_mode.rs  select_lang.rs  select_topic.rs
src/theme/: index.html
